--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,20 +1,19 @@
-name: Build and deploy
-on: 
-  push:
+name: Build
+on:
   workflow_dispatch:
 
 env:
- REGISTRY: ghcr.io
- IMAGE_NAME: ${{ github.repository }}
- 
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build-and-publish:
     name: "Prod: Bygg, test og push Docker image"
     runs-on: ubuntu-latest
     permissions:
-      packages: 'write'
-      contents: 'read'
-      id-token: 'write'
+      packages: "write"
+      contents: "read"
+      id-token: "write"
     outputs:
       image: ${{ steps.docker-build-push.outputs.image }}
     steps:
@@ -37,25 +36,25 @@ jobs:
       - id: yarn-install
         shell: bash
         run: yarn --immutable
-      
+
       - run: yarn lint
       - run: yarn build
         env:
           NEXT_PUBLIC_ENVIRONMENT: production
-      
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v2
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          
+
       - name: Push docker image to GHCR
         uses: docker/build-push-action@v4
         id: docker-build-push
